# OCP12_CRM_EpicEvents

./: README.md  db_diagram.txt  eecrm.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3c8668712499_populate_db_with_required_entries_for_.py  b4b61ea6d3e0_initial_database_structure_creation.py  de275cc8b0f2_make_some_clients_fields_nullable.py
epic_events_crm/: authentication.py  config.ini  database.py  init_db.py  permissions.py  utilities.py
epic_events_crm/controllers/: clients.py  contracts.py  departments_permissions.py  employees.py  events.py  main.py
epic_events_crm/models/: clients.py  contracts.py  departments_permissions.py  employees.py  events.py
epic_events_crm/repositories/: clients.py  contracts.py  departments_permissions.py  employees.py  events.py
epic_events_crm/views/: base.py  clients.py  contracts.py  employees.py  events.py  main.py
tests/: conftest.py  test_configuration.py
tests/integration_tests/: test_authentication.py
tests/integration_tests/controllers_tests/: test_clients.py  test_contracts.py  test_employees.py  test_events.py
tests/unit_tests/: test_authentication.py  test_database.py
tests/unit_tests/controllers_tests/: test_departments_permissions.py  test_employees.py
tests/unit_tests/models_tests/: test_employees.py
tests/unit_tests/repositories_tests/: test_clients.py  test_contracts.py  test_departments_permissions.py  test_employees.py  test_events.py
